@@ -11,30 +11,29 @@
  */
 package org.moqui.impl.entity
 
-import com.orientechnologies.orient.core.db.document.ODatabaseDocumentTx
-import com.orientechnologies.orient.core.record.impl.ODocument
 import org.apache.commons.collections.set.ListOrderedSet
-import org.moqui.entity.EntityException
+import org.moqui.entity.EntityCondition
 import org.moqui.entity.EntityList
 import org.moqui.entity.EntityListIterator
 import org.moqui.entity.EntityValue
-import org.moqui.impl.entity.orientdb.OrientDatasourceFactory
-import org.moqui.impl.entity.orientdb.OrientEntityValue
+import org.moqui.impl.context.TransactionCache
 import org.slf4j.Logger
 import org.slf4j.LoggerFactory
-
-import java.sql.SQLException
 
 class EntityListIteratorWrapper implements EntityListIterator {
     protected final static Logger logger = LoggerFactory.getLogger(EntityListIteratorWrapper.class)
 
     protected EntityFacadeImpl efi
+    protected final TransactionCache txCache
+
     protected List<EntityValue> valueList
     // start out before first
     protected int internalIndex = -1
 
     protected EntityDefinition entityDefinition
     protected ListOrderedSet fieldsSelected
+    protected EntityCondition queryCondition = null
+    protected List<String> orderByFields = null
 
     /** This is needed to determine if the ResultSet is empty as cheaply as possible. */
     protected boolean haveMadeValue = false
@@ -47,7 +46,11 @@ class EntityListIteratorWrapper implements EntityListIterator {
         this.valueList = valueList
         this.entityDefinition = entityDefinition
         this.fieldsSelected = fieldsSelected
+        this.txCache = (TransactionCache) efi.getEcfi().getTransactionFacade().getActiveSynchronization("TransactionCache")
     }
+
+    void setQueryCondition(EntityCondition ec) { this.queryCondition = ec }
+    void setOrderByFields(List<String> obf) { this.orderByFields = obf }
 
     @Override
     void close() {
@@ -134,6 +137,15 @@ class EntityListIteratorWrapper implements EntityListIterator {
             while ((value = this.next()) != null) {
                 list.add(value)
             }
+
+            if (txCache != null && queryCondition != null) {
+                // add all created values (updated and deleted values will be handled by the next() method
+                List<EntityValueBase> cvList = txCache.getCreatedValueList(entityDefinition.getFullEntityName(), queryCondition)
+                list.addAll(cvList)
+                // update the order if we know the order by field list
+                if (orderByFields != null && cvList) list.orderByFields(orderByFields)
+            }
+
             return list
         } finally {
             if (closeAfter) close()
